<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Seguimos llamando la imagen de nuestra aplicacion para esta seccion -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_principal" />
    <!-- Continuamos mostrando el nombre de la aplicacion -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Este TextView funciona para pedirle al usuario el ingreso a operar -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="348dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:text="@string/sub_titulo1"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <!-- El EditText para poner la cantidad de ingresos -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <!--Por ultimo contengo un radiogroup el cual funciona para que el usuario selecciona una opcion -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="301dp"
        android:layout_height="235dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion4" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion5" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>